--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 acres==0.5.0
+aiofiles==25.1.0
 anyio==4.11.0
 appnope==0.1.4
 argon2-cffi==25.1.0
@@ -31,6 +32,7 @@ formulaic==1.2.1
 fqdn==1.5.1
 frozendict==2.4.6
 fsspec==2025.10.0
+graphql-core==3.2.7
 greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
@@ -61,9 +63,11 @@ kiwisolver==1.4.9
 lark==1.3.1
 lazy_loader==0.4
 lxml==6.0.2
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.7
 matplotlib-inline==0.2.1
+mdurl==0.1.2
 mistune==3.1.4
 mne==1.10.2
 mne-bids==0.17.0
@@ -79,6 +83,7 @@ nilearn==0.12.1
 notebook_shim==0.2.4
 num2words==0.5.14
 numpy==2.3.4
+openneuro-py==2025.1.0
 packaging==25.0
 pandas==2.3.3
 pandocfilters==1.5.1
@@ -108,12 +113,15 @@ requests==2.32.5
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
+rich==14.2.0
 rpds-py==0.28.0
 scikit-learn==1.7.2
 scipy==1.16.3
 seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==80.9.0
+sgqlc==17.1
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
@@ -130,6 +138,7 @@ torchvision==0.17.2
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
+typer-slim==0.20.0
 typing_extensions==4.15.0
 tzdata==2025.2
 universal_pathlib==0.3.4
